# iodyne

./: Cargo.toml  README.md  demo.tape  flake.nix  package.nix
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  jsonl.rs  main.rs  screen.rs
src/collect/: devices.rs  ebpf.rs  filesystems.rs  hot_files.rs  io.rs  iokit.rs  linux.rs  macos.rs  mod.rs  mounts.rs  smart.rs  topology.rs  volumes.rs
src/collect/ebpf/: README.md  batch.rs  build-ebpf.sh  disk_latency.bpf.c  vfs_activity.bpf.c
src/insights/: mod.rs
src/tabs/: devices.rs  fs.rs  hot.rs  insights.rs  io.rs  mod.rs  overview.rs  smart.rs  volumes.rs
src/ui/: chrome.rs  format.rs  mod.rs  palette.rs  sparkline.rs
testing/ec2/: README.md  matrix.sh  remote-test.sh
