[package]
name = "diskwatch"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Single-host, read-only disk diagnostics TUI. Seven tabs across devices, volumes, filesystems, IO, SMART, and insights. Sibling to netwatch and syswatch."
license = "MIT"
repository = "https://github.com/matthart1983/diskwatch"
homepage = "https://github.com/matthart1983/diskwatch"
readme = "README.md"
keywords = ["disk", "storage", "tui", "diagnostics", "observability"]
categories = ["command-line-utilities"]
exclude = [
    # Demo assets aren't needed by anyone consuming the crate.
    "demo.gif",
    "demo.tape",
]

[[bin]]
name = "diskwatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Optional so fallback-only and non-Linux builds keep their existing dependency
# surface. The default Linux build enables it below. 0.12 supports Rust 1.75.
aya = { version = "0.12", optional = true }

[features]
# Linux attempts the embedded probe at startup and falls back cleanly when the
# process lacks tracing privileges. Other platforms compile the fallback only.
default = ["ebpf"]
ebpf = ["dep:aya"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
