[package]
name = "iodyne"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
description = "Single-screen, read-only disk IO, latency, topology, and health TUI."
license = "MIT"
repository = "https://github.com/jbellis/iodyne"
homepage = "https://github.com/jbellis/iodyne"
readme = "README.md"
keywords = ["disk", "storage", "tui", "diagnostics", "observability"]
categories = ["command-line-utilities"]
[[bin]]
name = "iodyne"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = { version = "0.32", default-features = false, features = ["disk", "system"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Optional so fallback-only and non-Linux builds keep their existing dependency
# surface. The default Linux build enables it below. 0.12 supports Rust 1.75.
aya = { version = "0.12", optional = true }

[features]
# Linux attempts the embedded probe at startup and falls back cleanly when the
# process lacks tracing privileges. Other platforms compile the fallback only.
default = ["ebpf"]
ebpf = ["dep:aya"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
